MMA-6563 Implementert persistAll